remove grafik source files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 
+Grafik
+GitIgnore
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,linux,unity,rider,git,jetbrains+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,linux,unity,rider,git,jetbrains+all
 
